--- a/dev/loyalty-card-empty.pug
+++ b/dev/loyalty-card-empty.pug
@@ -7,18 +7,17 @@ block variables
 
 //- Карта лояльности
 block content
- .page-content--personal-area
-  main.page-content
+  main.page-content.page-content--personal-area
       .page-inner.page-inner--w2
         .page-heading
           .row
             .col-md-4 
-              .mb-4.d-lg-none
+              .d-lg-none
                 a.link.link--gray_border(href="dashboard.html") Личный кабинет
               .page-heading-title.page-heading-title_personal.uppercase= title            
 
             .col-md-8
-            //-   .page-heading-title1.border-top-gray.only-desktop &nbsp;
+            //-   .page-heading-title1.border-bottom-gray.only-desktop &nbsp;
 
         .row
           .col-md-3.d-none.d-lg-block 
