--- a/dev/loyalty-card.pug
+++ b/dev/loyalty-card.pug
@@ -12,8 +12,8 @@ block content
         .page-heading
           .row
             .col-md-4 
-              .mb-4.d-lg-none
-                a.link.link--gray_border(href="dashboard.html") Личный кабинет
+              .d-lg-none
+                a.link.link--gray_border(href="dashboard.html") 1Личный кабинет
               .page-heading-title.page-heading-title_personal.uppercase= title            
 
             .col-md-8
