--- a/dev/modules/personal/last-order.pug
+++ b/dev/modules/personal/last-order.pug
@@ -18,7 +18,7 @@
       .col-md-3.mb-4.mb-lg-0
         p
           b Дата доставки
-        p —
+        p 07.03.2022
       .col-md-3
         p
           b Доставка
@@ -26,7 +26,6 @@
     .d-none.d-lg-block
       .row.justify-content-between.align-items-center.mb-5
         .col-auto
-          a.link.link--black_border(href='#') Отследить заказ
         .col-md-3
           a.btn.btn--medium.btn--black(href='#') ПОВТОРИТЬ ЗАКАЗ
     .d-lg-none
@@ -39,7 +38,7 @@
     .order-item-title.h2.mb-3 Параметры оплаты
     .mb-4
       b Счёт № 21112 от 03.02.2021
-      span.badge.red Не оплачено
+      //- span.badge.red Не оплачено
     .order-item-info.row.mb-2
       .col-md-3.mb-4.mb-lg-0
         p
@@ -49,7 +48,7 @@
         p
           b Способ оплаты
         p Картой или наличными при получении
-    a.link.link--black_border(href='#') Сменить способ оплаты
+    //- a.link.link--black_border(href='#') Сменить способ оплаты
     hr
     .order-item-title.h2.mb-3 Параметры отгрузки
     .mb-4
