--- a/dev/orders.pug
+++ b/dev/orders.pug
@@ -16,11 +16,11 @@ block content
               .page-heading-title.page-heading-title_personal.uppercase= title            
 
             .col-md-8
-              //- .page-heading-title1.border-top-gray.only-desktop &nbsp;
+              //- .page-heading-title1.border-bottom-gray.only-desktop &nbsp;
 
         .row
             .col-md-3.d-none.d-lg-block 
               +menu('personal-menu', personalMenuData, activeLink)
             .col-lg-1
-            .col-12.col-md-8.offset-md-2.col-lg-9.offset-lg-0.col-xl-8
+            .col-12.col-md-8.offset-md-2.col-lg-8.offset-lg-0.col-xl-8
               include modules/personal/orders 
