--- a/dev/personal.pug
+++ b/dev/personal.pug
@@ -16,7 +16,7 @@ block content
               .page-heading-title.page-heading-title_personal.uppercase= title            
 
             .col-md-8
-              //- .page-heading-title1.border-top-gray.only-desktop &nbsp;
+              //- .page-heading-title1.border-bottom-gray.only-desktop &nbsp;
 
         .row.row-test
             .col-md-3.d-none.d-lg-block 
