--- a/dev/history.pug
+++ b/dev/history.pug
@@ -1,9 +1,9 @@
 extends layout/main
 
 block variables
-  - var title = 'Заказы (2)'
-  - var mainPage = false
-  //- - const activeLink = 'История заказов'
+  - const title = 'История заказов'
+  - const mainPage = false
+  - const activeLink = 'Заказы (2)'
 
 //- ИСТОРИЯ ЗАКАЗОВ
 block content
@@ -14,14 +14,14 @@ block content
             .col-md-4 
               .mb-4.d-lg-none
                 a.link.link--gray_border(href="dashboard.html") Личный кабинет
-              .page-heading-title.page-heading-title_personal.uppercase= title            
+              .page-heading-title.page-heading-title_personal.uppercase.d-none.d-lg-block= activeLink           
 
             .col-md-8
-              //- .page-heading-title1.border-top-gray.only-desktop &nbsp;
+              //- .page-heading-title1.border-bottom-gray.only-desktop &nbsp;
 
         .row
           .col-md-3.d-none.d-lg-block 
-            +menu('personal-menu', personalMenuData, title)
+            +menu('personal-menu', personalMenuData, activeLink)
           .col-lg-1
-          .col-12.col-md-8.offset-md-2.col-lg-9.offset-lg-0.col-xl-8(style='border-top: 1px solid #E1E1E1;')
+          .col-12.col-md-8.offset-md-2.col-lg-8.offset-lg-0.col-xl-8.border-md-top-gray 
             include modules/personal/history  
