--- a/dev/last-order.pug
+++ b/dev/last-order.pug
@@ -1,7 +1,7 @@
 extends layout/main
 
 block variables
-  - var title = 'Заказы (2)'
+  - var title = 'История заказа | подробнее'
   - var mainPage = false
   - const activeMenuLink = 'Заказы (2)'
 
@@ -13,14 +13,12 @@ block content
               .col-md-4 
                 .mb-4.d-lg-none
                   a.link.link--gray_border(href="dashboard.html") Личный кабинет
-                .page-heading-title.page-heading-title_personal.uppercase= title            
+                .page-heading-title.page-heading-title_personal.uppercase= activeMenuLink            
 
               .col-md-8
-                //- .page-heading-title1.border-top-gray.only-desktop &nbsp;
 
           .row
            .col-md-3.d-none.d-lg-block 
-                //- include modules/menus/personal-menu
                 +menu('personal-menu', personalMenuData, activeMenuLink)
            .col-lg-1
            .col-12.col-md-8.offset-md-2.col-lg-9.offset-lg-0.col-xl-8
