--- a/dev/modules/orders/items-in-order.pug
+++ b/dev/modules/orders/items-in-order.pug
@@ -55,7 +55,7 @@
         .col-lg-3.d-none.d-lg-block 2 390 Р
   .row.justify-content-between.d-none.d-lg-flex
     .col-auto 
-      a.link.link--black_border(href="order-cancel.html") Отменить заказ
+      //- a.link.link--black_border(href="order-cancel.html") Отменить заказ
     .col-md-4
       .row.mb-2
         .col-md-8.right Общий вес: 
@@ -70,9 +70,9 @@
         .col-md-8.right
           b Всего: 
         .col-md-4 11 380 Р
-  .d-lg-none
+  .border-top-gray.d-lg-none
     p Общий вес: 4, 28 кг
-    p Стоимость доставки: 0 Р
+    p.pt-4 Стоимость доставки: 0 Р
     p Сумма заказа: 11 380 Р
     p
       b Всего: 11 380 Р
