--- a/dev/modules/personal/form-order-cancel.pug
+++ b/dev/modules/personal/form-order-cancel.pug
@@ -7,5 +7,5 @@ form.form
   .form-row
     .row-btns
       button.btn.btn--black.btn--medium(type='submit') Отменить заказ
-      span.m-4
+      span
         a.link.link--black_border(href='orders.html') Вернуться в текущие заказы
