--- a/dev/order-cancel.pug
+++ b/dev/order-cancel.pug
@@ -1,27 +1,27 @@
 extends layout/main
 
 block variables
-  - var title = 'Текущие заказы'
+  - var title = 'Отменить заказ'
   - var mainPage = false
   - const activeLink = 'Заказы (2)'
   
 
 
 block content
-  main.page-content
+  main.page-content.page-content--personal-area
       .page-inner.page-inner--w2
         .page-heading
           .row
             .col-md-4 
-              .mb-4.d-lg-none
+              .d-lg-none
                 a.link.link--gray_border(href="dashboard.html") Личный кабинет
               .page-heading-title.page-heading-title_personal.uppercase Заказы (2)
             .col-md-8
-              .page-heading-title1.border-top-gray.only-desktop &nbsp;
+              .page-heading-title1.border-bottom-gray.only-desktop &nbsp;
 
         .row
             .col-md-3.d-none.d-lg-block 
               +menu('personal-menu', personalMenuData, activeLink)
             .col-lg-1
-            .col-12.col-md-8.offset-md-2.col-lg-9.offset-lg-0.col-xl-8
+            .col-12.col-md-8.offset-md-2.col-lg-8.offset-lg-0.col-xl-8
               include modules/personal/order-cancel 
