--- a/dev/scss/blocks/_order.scss
+++ b/dev/scss/blocks/_order.scss
@@ -31,27 +31,32 @@
         margin-top: 0px;
     }
 }
-.order-item-text { 
-    margin-bottom: 30px;
-}
+
 
 .page-heading-title {
-    color: $color-black;
-    text-decoration: none;
     font-weight: 600;
-    font-size: 20px;
-    line-height: 30px;
-    text-transform: uppercase;
-
-    // margin-top: 40px;
-    // margin-bottom: 50px;
-
-    @media screen and (max-width: 768px) {
-        // border: 1px solid red;
+    font-size: 36px;
+    line-height: 46px;
+  
+    &_personal { 
+      font-weight: 600;
+      font-size: 20px;
+      line-height: 30px;
+  
+      @media screen and (max-width:991px) { 
+        margin: 30px 0;
+      }
+  
+      @media screen and (max-width:480px) {
         font-weight: 600;
         font-size: 14px;
         line-height: 20px;
+      }
     }
+  }
+
+.order-item-text { 
+    margin-bottom: 30px;
 }
 
 .order-table__row {
@@ -324,6 +329,7 @@
 .row-btns {
     display: flex;
     align-items: center;
+    gap: 20px;
 
     @media screen and (max-width:500px) {
         flex-direction: column-reverse;
@@ -352,9 +358,13 @@
 }
 
 
-.border-top-gray {
+.border-bottom-gray {
     border-bottom: 1px solid $color-gray-two;
 }
+.border-top-gray {
+    border-top: 1px solid $color-gray-two;
+}
+
 
 
 
