fix loyalty-card loyalty-card-empty

--- a/dev/loyalty-card.pug
+++ b/dev/loyalty-card.pug
@@ -13,7 +13,7 @@ block content
           .row
             .col-md-4 
               .d-lg-none
-                a.link.link--gray_border(href="dashboard.html") 1Личный кабинет
+                a.link.link--gray_border(href="dashboard.html") Личный кабинет
               .page-heading-title.page-heading-title_personal.uppercase= title            
 
             .col-md-8
@@ -21,5 +21,5 @@ block content
           .col-md-3.d-none.d-lg-block 
             +menu('personal-menu', personalMenuData, title)
           .col-lg-1
-          .col-12.col-md-8.offset-md-2.col-lg-9.offset-lg-0.col-xl-8
+          .col-12.col-md-8.offset-md-2.col-lg-8.offset-lg-0.col-xl-8
             include modules/personal/loyalty-card  
