--- a/dev/dashboard.pug
+++ b/dev/dashboard.pug
@@ -28,4 +28,4 @@ block content
             
             .col-lg-3.mb-lg-4.d-lg-none
                 a.personal-block(href='#')
-                  span.h3 Выйти 
+                  span.dashboard-enter Выйти 
