--- a/dev/modules/messages/basket-empty.pug
+++ b/dev/modules/messages/basket-empty.pug
@@ -10,4 +10,4 @@
     | чтобы увидеть выбранные товары.
 
   .row.justify-content-center
-    a.btn.btn--black.btn--medium(href='#') ПРОДОЛЖИТЬ ПОКУПКИ
+    a.btn.btn--black.btn--medium(href='brand.html') ПРОДОЛЖИТЬ ПОКУПКИ
