--- a/dev/modules/messages/successful-bid.pug
+++ b/dev/modules/messages/successful-bid.pug
@@ -8,5 +8,5 @@
     | с нами по номеру 
     a(href="tel:+78632273135") +7 (863) 227-31-35
   .row.justify-content-center
-    a.btn.btn--black.btn--medium(href='#') ПРОДОЛЖИТЬ ПОКУПКИ
+    a.btn.btn--black.btn--medium(href='brand.html') ПРОДОЛЖИТЬ ПОКУПКИ
     
