--- a/dev/scss/blocks/_personal.scss
+++ b/dev/scss/blocks/_personal.scss
@@ -68,11 +68,22 @@
   }
 }
 
-.dashboard-enter {
+.dashboard-enter { 
   font-weight: 600;
   font-size: 20px;
   line-height: 25px;
   text-transform: uppercase;
+}
+
+@media screen and (max-width:480px) {
+  .dashboard-enter { 
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 20px;
+    text-transform: uppercase;
+    text-decoration: underline;
+    padding-bottom: 25px !important;
+  }
 }
 
 .personal {
