--- a/dev/css/project-main.css
+++ b/dev/css/project-main.css
@@ -6372,3 +6372,41 @@ input[type=number]:focus {
           appearance: none;
   -moz-appearance: textfield;
 }
+
+/* overlay at start */
+.mfp-fade.mfp-bg {
+  opacity: 0;
+  transition: all 0.15s ease-out;
+}
+
+/* overlay animate in */
+.mfp-fade.mfp-bg.mfp-ready {
+  opacity: 0.8;
+}
+
+/* overlay animate out */
+.mfp-fade.mfp-bg.mfp-removing {
+  opacity: 0;
+}
+
+/* content at start */
+.mfp-fade.mfp-wrap .mfp-content {
+  opacity: 0;
+  transition: all 0.15s ease-out;
+}
+@media screen and (max-width: 480px) {
+  .mfp-fade.mfp-wrap .mfp-content {
+    transition: 0.5s;
+    transform: translateY(100%);
+  }
+}
+
+/* content animate it */
+.mfp-fade.mfp-wrap.mfp-ready .mfp-content {
+  opacity: 1;
+}
+
+/* content animate out */
+.mfp-fade.mfp-wrap.mfp-removing .mfp-content {
+  opacity: 0;
+}
