fix 'Как подобрать размер'

--- a/dev/modules/footer-popups.pug
+++ b/dev/modules/footer-popups.pug
@@ -12,6 +12,7 @@ include ./popups/change-password-popup
 include ./popups/registration
 include ./popups/nosms
 include ./popups/sms-cod-popup
+include ./popups/catalog-size-popup
 
 //- include ./popups/show-on-map-popup  
 include ./popups/checkout-popup 
