--- a/dev/modules/filter-sizes-block.pug
+++ b/dev/modules/filter-sizes-block.pug
@@ -1,7 +1,9 @@
 .mobile-filter-item-content
-    //- a.link.link--black_border(href='#message-you-subscribed' data-popup='{"type":"inline"}') Сообщение об удачной подписке
+    a.link.link--black_border(href='#catalog-size-popup' data-popup='{"type":"inline"}') Как подобрать размер
     //- a.mobile-filter__link.size-open(href='#') Руководство по размерам
-    a.link.link--black_border.size-open(href='#') Как подобрать размер
+    //- a.link.link--black_border.size-open-link(href='#') Как подобрать размер
+    //- a.btn.btn--black.btn--medium.btn--fullwidth(href='#size-popup' data-popup='{"type":"inline"}')
+    //-   | ДОБАВИТЬ В КОРЗИНУ 
     each size in sizes
       .filter-row.filter-row__size
         label.form-checkbox
