--- a/dev/css/project-main.css
+++ b/dev/css/project-main.css
@@ -6410,3 +6410,7 @@ input[type=number]:focus {
 .mfp-fade.mfp-wrap.mfp-removing .mfp-content {
   opacity: 0;
 }
+
+.tooltip__close {
+  cursor: pointer;
+}
