--- a/dev/css/project-main.scss
+++ b/dev/css/project-main.scss
@@ -572,3 +572,7 @@ input[type="number"]:focus {
 .mfp-fade.mfp-wrap.mfp-removing .mfp-content {
   opacity: 0;
 }
+
+.tooltip__close { 
+  cursor: pointer;
+}
