--- a/dev/modules/popups/tooltip-templates.pug
+++ b/dev/modules/popups/tooltip-templates.pug
@@ -9,5 +9,5 @@
         div
           a.link.link--black_border.add-favorites__link(href='favorites.html')
             | Перейти в избранное
-    a.tooltip__close(href='#')
+    .tooltip__close
       img(src='../svg/close.svg' alt='')
