fix add size popups

--- a/dev/modules/footer-popups.pug
+++ b/dev/modules/footer-popups.pug
@@ -13,6 +13,7 @@ include ./popups/registration
 include ./popups/nosms
 include ./popups/sms-cod-popup
 include ./popups/catalog-size-popup
+include ./popups/change-size-popup
 
 //- include ./popups/show-on-map-popup  
 include ./popups/checkout-popup 
