--- a/dev/modules/popups/mobile-filter.pug
+++ b/dev/modules/popups/mobile-filter.pug
@@ -8,7 +8,7 @@
           .mobile-filter-close
           .mobile-filter-heading
             .mobile-filter-heading-title Фильтры(3)
-            a.basket__title-link-clean-basket.mobile-filter-heading-reset(href='#' onclick='window.location.reload();return false;')
+            .basket__title-link-clean-basket.mobile-filter-heading-reset
               | Очистить фильтр
 
           .mobile-filter-items
