fix filter popup - not finish (not fix styles from oleg)

--- a/dev/css/project-main.css
+++ b/dev/css/project-main.css
@@ -2161,10 +2161,8 @@ a.basket-menu__link_lowercase {
 }
 /* показ фильтра */
 .mobile-filter {
-  height: 100vh;
   display: flex;
   flex-direction: column;
-  border: 1px solid green;
 }
 
 .mobile-filter-footer {
@@ -2976,6 +2974,12 @@ ul.disc {
 #change-color-popup.page-popup,
 #change-size-popup.page-popup {
   padding: 20px;
+}
+
+#catalog-size-popup.page-popup {
+  max-width: 600px;
+  height: 100vh !important;
+  overflow: hidden;
 }
 
 .page-footer {
