--- a/dev/scss/blocks/_mobile-menu-filter.scss
+++ b/dev/scss/blocks/_mobile-menu-filter.scss
@@ -301,10 +301,10 @@
 /* показ фильтра */
 
 .mobile-filter {
-  height: 100vh;
+  // height: 100vh;
   display: flex;
   flex-direction: column;
-  border: 1px solid green;
+  // border: 1px solid green;
 }
 
 .mobile-filter-footer {
