--- a/dev/scss/blocks/_page-popup.scss
+++ b/dev/scss/blocks/_page-popup.scss
@@ -223,3 +223,9 @@
 #change-size-popup.page-popup {
     padding: 20px;
 }
+
+#catalog-size-popup.page-popup {
+    max-width: 600px;
+    height: 100vh !important;
+    overflow: hidden;
+}
