--- a/dev/modules/popups/mobile-filter.pug
+++ b/dev/modules/popups/mobile-filter.pug
@@ -2,44 +2,46 @@
   form
     .basket-inner.page-inner--w2
       .mobile-filter-close
-      .basket-menu-sections
+      .basket-menu-sections(style='padding:0;')
 
         .mobile-filter-scroll-holder
           .mobile-filter-scroll-inner
             .mobile-filter
-              .mobile-filter-heading
-                .mobile-filter-heading-title Фильтры(13)
+              .mobile-filter-heading.p-0(style1='padding:0;')
+                .mobile-filter-heading-title Фильтры(3)
                 .basket__title-link-clean-basket.mobile-filter-heading-reset
-                  | Очистить фильтр
+                  | Очистить
+                  | фильтр
 
-              .mobile-filter-items
-                .mobile-filter-item
+              .mobile-filter-items(style='height: calc(100vh - 200px); overflow-y: auto; overflow-x: hidden;')
+                .mobile-filter-item(style='margin:0;')
                   .mobile-filter-item-heading
                     .mobile-filter-item-heading-title Сортировать (Цена по убыванию)
                     .mobile-filter-item-heading-toggler
                   include ../filter-priсes-block
 
-                .mobile-filter-item
+                .mobile-filter-item.m-0(style1='margin:0;')
                   .mobile-filter-item-heading
                     .mobile-filter-item-heading-title Цвет(2)
                     .mobile-filter-item-heading-toggler
                   include ../filter-colors-block  
-                .mobile-filter-item
+                .mobile-filter-item.m-0(style1='margin:0;')
                   .mobile-filter-item-heading
                     .mobile-filter-item-heading-title Материалы
                     .mobile-filter-item-heading-toggler
                   include ../filter-materials-block 
                   .mobile-filter-item-content
-                .mobile-filter-item
+                .mobile-filter-item.m-0(style1='margin:0;')
                   .mobile-filter-item-heading
                     .mobile-filter-item-heading-title Размер
                     .mobile-filter-item-heading-toggler
                   include ../filter-sizes-block
-                .mobile-filter-item.open
+                .mobile-filter-item.open.m-0(style1='margin:0;')
                   .mobile-filter-item-heading
                     .mobile-filter-item-heading-title Цена
                     .mobile-filter-item-heading-toggler
                   .mobile-filter-item-content
+
                     .filter-price
                       .filter-price-fields
                         .filter-price-field-item
@@ -50,9 +52,6 @@
                           input.form-item.form-item--text.filter-price-field.filter-price-field--to(type='text' value='1000000')
                       input.form-item.form-item--range(type='range' data-value='1000,1000000' value='1000, 1000000' min='1000' max='1000000' step='1' multiple)
 
-              //- .mobile-filter-btns
-              //-   button.btn.btn--black.btn--medium(type='submit')
-              //-     | ПОКАЗАТЬ РЕЗУЛЬТАТЫ (688)
-
-      .basket-mobile-menu__footer.mobile-filter-btns
-        button.btn.btn--black.btn--medium.w100.max-w100(type='submit') ПОКАЗАТЬ РЕЗУЛЬТАТЫ (688)
+              .mobile-filter-btns
+                button.btn.btn--black.btn--medium
+                  | ПОКАЗАТЬ РЕЗУЛЬТАТЫ (688)
