--- a/dev/scss/blocks/_mobile-menu-filter.scss
+++ b/dev/scss/blocks/_mobile-menu-filter.scss
@@ -137,6 +137,16 @@
     -ms-transform: translateY(0);
     transform: translateY(0);
   }
+  .mobile-filter-item.m-0.selected:before {
+    opacity: 1;
+    -ms-filter: none;
+    filter: none;
+    -webkit-transform: translateY(0);
+    -moz-transform: translateY(0);
+    -o-transform: translateY(0);
+    -ms-transform: translateY(0);
+    transform: translateY(0);
+  }
   .mobile-filter-item .mobile-filter-item-heading {
     position: relative;
     padding: 12px 0;
@@ -414,6 +424,8 @@
   padding: 5px 0x;
   border-bottom: 1px solid $color-gray-two;
 
+  // border: 1px solid red;
+
   &--size {
     @media screen and (max-width:480px) {
       
@@ -430,6 +442,9 @@
       }
     }
 
+  }
+  .form-checkbox-title {
+    white-space: nowrap;
   }
 }
 
@@ -474,6 +489,7 @@
 .jcf-checkbox.jcf-checked {
   background-color: $color-black;
   border-color: $color-black;
+ 
 
   input {
     z-index: -1;
@@ -532,6 +548,17 @@
 
   .order-table__info .jcf-number input {
     height: 25px;
+  }
+}
+
+.wrapper-form-checkbox {
+  margin-top: 20px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 10px;
+
+  @media screen and (max-width: 480px) {
+    grid-template-columns: repeat(2, 1fr);
   }
 }
 
