--- a/dev/modules/popups/mobile-filter.pug
+++ b/dev/modules/popups/mobile-filter.pug
@@ -1,4 +1,4 @@
-#mobile-filter-menu.mobile-filter-holder
+.mobile-filter-holder
   form
     .basket-inner.page-inner--w2
       .mobile-filter-close
@@ -7,12 +7,12 @@
         .mobile-filter-scroll-holder
           .mobile-filter-scroll-inner
             .mobile-filter
-              .mobile-filter-heading.p-0
+              .mobile-filter-heading
                 .mobile-filter-heading-title Фильтры(3)
                 .basket__title-link-clean-basket.mobile-filter-heading-reset
                   | Очистить фильтр
 
-              .mobile-filter-items(style='height: calc(100vh - 185px); overflow-y: auto; overflow-x: hidden;')
+              .mobile-filter-items
                 .mobile-filter-item.m-0
                   .mobile-filter-item-heading
                     .mobile-filter-item-heading-title Сортировать (Цена по убыванию)
