filter same edits

--- a/dev/modules/popups/mobile-filter.pug
+++ b/dev/modules/popups/mobile-filter.pug
@@ -58,5 +58,5 @@
 
               .mobile-filter-btns
                 //- button.btn.btn--black.btn--medium
-                a.btn.btn--black.btn--medium(href='brand.html')
+                a.btn.btn--black.btn--medium(href='search.html')
                   | ПОКАЗАТЬ РЕЗУЛЬТАТЫ (688)
