same edits for card

--- a/dev/utils/data.pug
+++ b/dev/utils/data.pug
@@ -29,11 +29,19 @@
       //- ТК "Невский центр" СПб (1)
 
     const dataList = [
-      {name: 'Outlet Village Белая Дача ', balance: '1'},
-      {name: 'Vnukovo Premium Outlet ', balance: '1'},
-      {name: 'Таганская, Москва ', balance: '1'},
-      {name: 'ТГ "Модный Сезон" Москва ', balance: '1'},
-      {name: 'ТК "Невский центр" СПб ', balance: '2'},
+      {name: 'Vnukovo Premium Outlet', balance: '1'},
+      {name: 'Малый Патриарший пер., Москва', balance: '1'},
+      {name: 'ОСНОВНОЙ СКЛАД', balance: '1'},
+      {name: 'Таганская, Москва', balance: '1'},
+      {name: 'ТГ "Модный Сезон" Москва', balance: '2'},
+
+      {name: 'ТК "Невский центр" СПб', balance: '1'},
+      {name: 'ТРК "Тандем", Казань', balance: '1'},
+      {name: 'ТРЦ "Афимолл Сити" Москва', balance: '1'},
+      {name: 'ТРЦ "Ереван Плаза" Москва', balance: '1'},
+      {name: 'ТЦ "Авиапарк" Москва" Москва', balance: '2'},
+      {name: 'ТЦ "Капитолий" Москва', balance: '2'},
+      {name: 'Хохрякова, Екатеринбург', balance: '2'},
       ]
 
     const dataListMeasurements = [
