--- a/dev/shops.pug
+++ b/dev/shops.pug
@@ -14,3 +14,5 @@ block content
       .filters-block-wrapper
         include modules/filters/filter-shops
       include modules/catalog-shops
+    | ffff
+    #map
