experiants with shop-map points

--- a/dev/shops.pug
+++ b/dev/shops.pug
@@ -15,4 +15,4 @@ block content
         include modules/filters/filter-shops
       include modules/catalog-shops
     | ffff
-    #map
+    //- #map
