--- a/dev/modules/catalog-large.pug
+++ b/dev/modules/catalog-large.pug
@@ -868,13 +868,23 @@ block variables
             path(d='M20.9785 12.1438C21.1737 11.9486 21.4903 11.9486 21.6856 12.1438C21.8808 12.3391 21.8808 12.6557 21.6856 12.8509L20.9785 12.1438ZM14.3939 20.1426C14.1987 20.3379 13.8821 20.3379 13.6868 20.1426C13.4915 19.9474 13.4915 19.6308 13.6868 19.4355L14.3939 20.1426ZM21.6856 12.8509L14.3939 20.1426L13.6868 19.4355L20.9785 12.1438L21.6856 12.8509Z' fill='#1D1D1D')
       //- .catalog-item-photo-holder
       .catalog-item-photo-holder.catalog-item-slider(data-params='{"slidesToShow": 1, "slidesToScroll": 1, "infinite": true}')
-
         img.only-desktop.cover(src='../dummy/catalog-large/с28.jpg' )
         img.only-mobile.cover(src='../dummy/catalog-large/mobile/с28.jpg' )
         img.cover(src='../dummy/catalog-large/c8.jpg')
         img.cover(src='../dummy/catalog-large/c8.jpg')
         img.cover(src='../dummy/catalog-large/c8.jpg')
         img.cover(src='../dummy/catalog-large/c8.jpg')
+
+      include card-sizes-block    
+      .catalog-item-title 
+        span 
+          span ПЛАТЬЕ
+          .catalog-item-price.text-left 17 200 РУБ.
+        .catalog-item-color +2 цвета
+      include card-colors-block-2
+      a.catalog-item-link(href='card.html')
+      button.catalog-item-like(type='button') 
+
 
     .page-toolbar(style="margin-bottom: 0;")
       .load-more-holder
