--- a/dev/modules/footer.pug
+++ b/dev/modules/footer.pug
@@ -3,7 +3,7 @@
 footer.page-footer(itemscope='' itemtype='http://schema.org/WPFooter')
 
   if (pageName === 'brand-large')
-    .big-grid
+    .big-grid(style='padding: 0 20px;')
       .big-grid__item-double-center.text-left
         include footer-inner 
   else
