--- a/dev/modules/catalog-large.pug
+++ b/dev/modules/catalog-large.pug
@@ -891,7 +891,7 @@ block variables
         a.btn.btn--black_border.btn--medium.load-more(href='section.html' data-container='#catalog-items' data-itemsselector='#catalog-items .catalog-items') ПОКАЗАТЬ ЕЩЕ 20
     
 //- -------------- slider-prev-watched -----------------
-.big-grid__item-double-center 
+.big-grid__item-double-center(style='margin-left: 0; margin-right: 0;')
     .catalog
       include slider-prev-watched   
 
