--- a/dev/css/project-main.scss
+++ b/dev/css/project-main.scss
@@ -128,6 +128,10 @@
   padding: 0 10px;
 }
 
+.plr-15px {
+  padding: 0 15px;
+}
+
 .hidden-x {
   overflow-x: hidden;
 }
@@ -205,7 +209,11 @@
 
 .bold {
   font-weight: bold;
-}
+} 
+
+.left-12px {
+  position: relative; left: -12px;
+} 
 
 .tooltip_templates {
   display: none;
