--- a/dev/css/project-main.css
+++ b/dev/css/project-main.css
@@ -1775,6 +1775,8 @@ a.basket-menu__link_lowercase {
 
 .filters-row__list {
   max-width: 490px;
+  position: relative;
+  z-index: 1;
 }
 
 .filters-list {
