--- a/dev/layout/main.pug
+++ b/dev/layout/main.pug
@@ -14,7 +14,7 @@ html.no-js(lang='ru' prefix='og:http://ogp.me/ns#')
   body.overflow-x(class={'body-main':mainPage,
 				'body-inner':innerPage})
 
-    .page
+    .page.overflow-x
       include ../modules/page-note
       include ../modules/header
 
