--- a/dev/scss/blocks/_catalog.scss
+++ b/dev/scss/blocks/_catalog.scss
@@ -867,4 +867,10 @@
     padding-right: 2.5px;
     padding-left: 2.5px;
   }
+
+  #catalog-items .slider-prev-watched .row {
+    padding-left: 15px;
+  }
+
+
 }
