--- a/dev/scss/blocks/_mobile-menu-filter.scss
+++ b/dev/scss/blocks/_mobile-menu-filter.scss
@@ -622,9 +622,9 @@
 
 
 @media screen and (max-width: 960px) {
-  .page-inner--mobile_empty {
-    padding: 0 15px !important;
-  }
+  // .page-inner--mobile_empty {
+  //   padding: 0 15px !important;
+  // }
 
 
   .jcf-number {
