--- a/dev/scss/blocks/_filter.scss
+++ b/dev/scss/blocks/_filter.scss
@@ -98,6 +98,10 @@
     width: 100%;
     justify-content: space-between;
     gap: 10px;
+
+    @media screen and(max-width:480px) { 
+        margin-left: 15px;
+    }
 }
 
 .filters-list-small {
